--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -30,7 +30,7 @@ jobs:
         choco install vcpython27 -f -y
 
     - name: Build sdist
-      if: startsWith(matrix.os, 'linux')
+      if: startsWith(matrix.os, 'ubuntu')
       run: |
         python -m pip install pybind11==2.4.3
         python setup.py bindings/python/sdist --dist-dir bindings/python/dist
