Fix path to setup.py

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -33,7 +33,7 @@ jobs:
       if: startsWith(matrix.os, 'ubuntu')
       run: |
         python -m pip install pybind11==2.4.3
-        python setup.py bindings/python/sdist --dist-dir bindings/python/dist
+        python bindings/python/setup.py bindings/python/sdist --dist-dir bindings/python/dist
 
     - name: Build and test wheels
       run: |
